--- a/css/style.css
+++ b/css/style.css
@@ -207,10 +207,6 @@ body {
   background-image: linear-gradient(to top, rgba(255, 255, 255, 0.4), #fff);
   z-index: 1;
   opacity: 0.8;
-  -webkit-transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  -moz-transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  -ms-transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  -o-transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
 }
 
 .flower__white-circle {
@@ -597,6 +593,7 @@ body {
   border-left: 2vmin solid #ce0cc4;
   background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
   -webkit-mask-image: linear-gradient(to top, transparent 30%, #fff 60%);
+  mask-image: linear-gradient(to top, transparent 30%, #fff 60%);
 }
 
 .flower__g-right--1 {
@@ -800,7 +797,8 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #ce0cc4;
+  -webkit-mask-image: linear-gradient(to top, transparent 25%, #140888 50%);
+  mask-image: linear-gradient(to top, transparent 25%, #140888 50%);
   -webkit-mask-image: linear-gradient(to top, transparent 25%, #140888 50%);
   position: relative;
   z-index: 1;
@@ -815,7 +813,8 @@ body {
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(0, 0%, 100%, 0.2);
   background-color: #ffffff; /* Cambia el color de las hojas a azul */
-  background-image: linear-gradient(to top, #1602c5, #1115eb); /* Cambia el color de las hojas a azul */
+  -webkit-mask-image: linear-gradient(135deg, #ffffff 40%, transparent 50%, transparent);
+  mask-image: linear-gradient(135deg, #ffffff 40%, transparent 50%, transparent);
   background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #fff 45%, transparent 50%, transparent);
   -webkit-mask-image: linear-gradient(135deg, #ffffff 40%, transparent 50%, transparent);
 }
@@ -927,6 +926,9 @@ body {
 .long-g--1 {
   bottom: 0vmin;
   transform: scale(0.8) rotate(-5deg);
+  -webkit-mask-image: linear-gradient(to top, transparent 40%, #fff 80%) !important;
+  mask-image: linear-gradient(to top, transparent 40%, #fff 80%) !important;
+  mask-image: linear-gradient(to top, transparent 40%, #fff 80%) !important;
 }
 
 .long-g--1 .leaf {
@@ -945,7 +947,11 @@ body {
   bottom: -3vmin;
   left: -35vmin;
   transform-origin: center;
-  transform: scale(0.6) rotateX(60deg);
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #fff 80%) !important;
+  mask-image: linear-gradient(to top, transparent 50%, #fff 80%) !important;
+  mask-image: linear-gradient(to top, transparent 50%, #fff 80%) !important;
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, #fff 80%) !important;
+  mask-image: linear-gradient(to top, transparent 50%, #fff 80%) !important;
 }
 
 .long-g--2 .leaf,
@@ -1007,12 +1013,12 @@ body {
   --h: 40vmin;
   --c: #1aaa15;
   position: absolute;
-  bottom: 0;
+  -webkit-mask-image: linear-gradient(to top, transparent 20%, var(--dark-color));
+  mask-image: linear-gradient(to top, transparent 20%, var(--dark-color));
   width: var(--w);
   height: var(--h);
   border-top-left-radius: 100%;
   border-left: 2vmin solid var(--c);
-  -webkit-mask-image: linear-gradient(to top, transparent 20%, var(--dark-color));
   transform-origin: bottom center;
 }
 
@@ -1218,16 +1224,9 @@ body {
   0% {
     transform: scale(0);
   }
+  100% {
+    transform: scale(1);
+  }
 }
+/* Removed empty ruleset */
 
-.not-loaded * {
-  animation-play-state: paused !important;
-}
-
-.leaf,
-.flower__leaf,
-.flower__g-fr__leaf,
-.flower__line__leaf,
-.flower__grass__leaf {
-
-}
